<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_gravity="center"
    app:cardCornerRadius="16sp"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/error"
            android:layout_margin="15dp"
            android:id="@+id/close_dialog"
            />
        <LinearLayout
            android:layout_below="@+id/close_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="start|center"
                    android:layout_weight="1"
                    android:background="@drawable/ed_style"
                    android:hint="@string/lname"
                    android:paddingStart="10dp"
                    android:textColorHint="@color/colorPrimary" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="start|center"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/ed_style"
                    android:hint="@string/fname"
                    android:paddingStart="10dp"
                    android:textColorHint="@color/colorPrimary" />
            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/ed_style"
                android:hint="@string/phone"
                android:gravity="start|center"
                android:inputType="phone"
                android:paddingStart="10dp"
                android:textColorHint="@color/colorPrimary" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/ed_style"
                android:hint="@string/location"
                android:enabled="false"
                android:layout_marginBottom="10dp"
                android:paddingStart="10dp"
                android:gravity="start|center"
                android:textColorHint="@color/colorPrimary" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="top|start"
                android:background="@drawable/ed_style"
                android:hint="@string/Addetails"
                android:paddingStart="10dp"
                android:textColorHint="@color/colorPrimary" />
            <androidx.cardview.widget.CardView
                android:id="@+id/btn_addads"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="16sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/add_ads"
                    android:textColor="@color/colorwhite" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>