<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.Activities.ContactUs">
    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/contact"
            android:textColor="@color/colorwhite" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_gravity="top"
        android:gravity="center"
        android:layoutDirection="ltr"
        android:layout_above="@+id/lincontents"
        android:orientation="horizontal"
        android:weightSum="2">


        <LinearLayout
            android:id="@+id/appname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_EG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="EG"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorAccent"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/txt_shipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Shipo"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorwhite"
                android:textSize="40sp" />

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_marginBottom="20dp"
        android:id="@+id/lincontents"
        >
    <LinearLayout
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:layoutDirection="rtl"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/whats"
            android:id="@+id/whats"
            />
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/face"
            android:id="@+id/face"
            />
    </LinearLayout>

        <EditText
            android:id="@+id/fullname"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="start|center"
            android:hint="@string/fname"
            android:background="@drawable/cardlogin"
            android:paddingStart="10dp"
            android:textColor="@color/colorAccent"
            android:paddingEnd="10dp"
            android:textColorHint="@color/colorAccent" />
        <EditText
            android:id="@+id/email"
            android:background="@drawable/cardlogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:gravity="start|center"
            android:hint="@string/email"
            android:paddingStart="10dp"
            android:textColor="@color/colorAccent"
            android:paddingEnd="10dp"
            android:textColorHint="@color/colorAccent" />
        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/cardlogin"
            android:gravity="start|center"
            android:layout_margin="8dp"
            android:hint="@string/phone"
            android:paddingStart="10dp"
            android:textColor="@color/colorAccent"
            android:paddingEnd="10dp"
            android:textColorHint="@color/colorAccent" />
        <EditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:inputType="textMultiLine"
            android:background="@drawable/cardlogin"
            android:gravity="start|top"
            android:layout_margin="8dp"
            android:hint="الرسالة"
            android:paddingStart="10dp"
            android:textColor="@color/colorAccent"
            android:paddingEnd="10dp"
            android:textColorHint="@color/colorAccent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="16sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Done"
                android:textColor="#000" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>