<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Activities.AboutUs">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_red"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/about"
            android:textColor="@color/colorwhite" />
    </RelativeLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:id="@+id/containerdetails"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_below="@+id/toolbar"
                android:background="@drawable/bg_red"
                android:gravity="end"
                android:layoutDirection="rtl"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_user"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/newlogo" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:layoutDirection="rtl"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fname"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:id="@+id/txt_companyName"
                        android:textColor="@color/colorwhite" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cairo_regular"
                        android:id="@+id/txt_companyemail"
                        android:text="@string/email"
                        android:textColor="@color/colorwhite" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/containerdetails"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="@color/colorPrimary">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="15dp"
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            android:id="@+id/txt_companyaddress"
                            android:text="@string/address"
                            android:textColor="@color/colorAccent" />




                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="15dp"
                            android:layout_marginBottom="10dp"
                            android:gravity="center"
                            android:text="@string/about"
                            android:id="@+id/txt_companydes"
                            android:textColor="@color/colorAccent" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginEnd="15dp"
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            android:id="@+id/txt_comanyphone"
                            android:text="@string/phone"
                            android:textColor="@color/colorAccent" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</RelativeLayout>